# markdown-hierarchy-viewer

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
src/app/: globals.css  layout.tsx
src/components/: DiagramView.tsx  FileTree.tsx  MarkdownInput.tsx  MarkdownViewer.tsx  SubTree.tsx  TableOfContents.tsx
src/lib/: fileTree.ts  markdown.ts
static/: app.js  style.css
templates/: viewer.html
test_directory/: INDEX.md
test_directory/.claude/: settings.local.json
test_directory/meetings/: README.md
test_directory/meetings/2026-06/: 2026-06-05-all-hands.md  README.md
test_directory/projects/: README.md
test_directory/projects/archive/auth-refactor/: README.md
test_directory/projects/bi-platform/: README.md  architecture.md  tasks.md
test_directory/projects/ec-renewal/: README.md  meetings.md  risks.md  spec.md  tasks.md
test_directory/projects/mobile-v2/: README.md  risks.md  tasks.md
test_directory/resources/: README.md  external-links.md
test_directory/resources/processes/: incident-response.md  onboarding.md
test_directory/resources/tech-guides/: code-review.md  git-workflow.md
test_directory/templates/: README.md  meeting-template.md  postmortem-template.md  project-template.md  weekly-report-template.md
test_directory/weekly/: 2026-W22.md  2026-W23.md  README.md
