[project]
name = "markdown-hierarchy-viewer"
version = "0.1.0"
description = "Hierarchical Markdown directory viewer — Python/FastAPI edition"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "markdown>=3.7",
    "pygments>=2.18",
]

[project.scripts]
mdview = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "src/",
    "node_modules/",
    "test_directory/",
    ".next/",
    "public/",
]
